tests/e2e/semantics/semi_global_assignment4.error
Error: syntax error in story at line 6, column 1

6|    a = 2
      ^

E0127: `a` is readonly and can not be assigned to.
